--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -58,6 +58,8 @@
    </section>
 
    <footer>
+<button type="button" id="busq" onclick="location.href='/posts/search'">Buscar</button>
+
       CORE 2013-2014 - UPM
    </footer>
 </body>
